# quickstart

./: .gitignore  CLEANUP_PLAN.md  CONTRIBUTING.md  README.md  analyse_logs.sh  claim_staking_rewards.sh  extract_private_keys.sh  migrate_to_pearl.sh  pyproject.toml  reset_configs.sh  reset_password.sh  reset_staking.sh  run_service.sh  stop_service.sh  terminate_on_chain_service.sh  tox.ini
.github/workflows/: python-tests.yml
.github/workflows/.github/workflows/: python-tests.yml
configs/: config_agents.fun.json  config_langchain.json  config_mech.json  config_memeooorr.json  config_memeooorr_eliza.json  config_modius.json  config_optimus.json  config_predict_trader.json
scripts/: utils.py
scripts/mech/: .api_keys.json.example  .gitignore  .metadata_hash.json.example  .tools_to_packages_hash.json.example  README.md  __init__.py  migrate_legacy_mech.py  minimize_json.py  setup_metadata_hash.py
scripts/modius/: README.md  __init__.py  migrate_legacy_modius.py
scripts/optimus/: README.md  __init__.py  migrate_legacy_optimus.py
scripts/pearl_migration/: README.md  __init__.py  detect.py  filesystem.py  migrate_to_pearl.py  prompts.py  status.py  stop.py  transfer.py  wallet.py
scripts/predict_trader/: README.md  __init__.py  mech_events.py  migrate_legacy_mech.py  migrate_legacy_modius.py  migrate_legacy_optimus.py  migrate_legacy_quickstart.py  rank_traders.py  report.py  trades.py
tests/: test_migrate_to_pearl.py  test_run_service.py  test_staking_service.py
tests/test_scripts/: conftest.py  test_pearl_migration.py  test_utils.py
tests/test_scripts/test_optimus/: test_migrate_legacy_optimus.py
tests/test_scripts/test_predict_trader/: test_mech_events.py  test_migrate_legacy_quickstart.py  test_rank_traders.py  test_report.py  test_trades.py
