[project]
name = "quickstart"
version = "0.1.0"
description = "A quickstart for the OLAS AI agents"
authors = [
    { name = "David Vilela", email = "dvilelaf@gmail.com" },
    { name = "Viraj Patel", email = "vptl185@gmail.com" },
    { name = "Ojuswi Rastogi", email = "ojuswimail@gmail.com" },
]
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "olas-operate-middleware==0.15.21",
    "tqdm==4.67.3",
    "python-dotenv==1.2.2",
    "gql[requests]==3.5.0",
    "halo==0.0.31",
    "web3==7.16.0",
    "docker==7.1.0",
    "psutil==5.9.8",
    "open-aea==2.2.6",
    "open-aea-ledger-ethereum==2.2.6",
    "open-autonomy==0.21.22",
]

[dependency-groups]
dev = [
    "pexpect==4.9.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
]

[tool.uv]
package = false
default-groups = "all"

[tool.pytest.ini_options]
# anchorpy ships a pytest plugin (via open-autonomy -> open-aea-ledger-solana ->
# anchorpy) that imports pytest_xprocess at startup, but xprocess is only in
# anchorpy's [pytest] extra and is never installed. Disable the plugin so
# pytest can boot.
addopts = "-p no:pytest_anchorpy"
markers = [
    "e2e: end-to-end tests that may use real network/external systems",
    "integration: integration tests that may use networked dependencies",
]
